# video-challenge

./: .dockerignore  .gitignore  README.md  compose.yml  main.py  pyproject.toml  run_model_1.py  run_model_2.py  tabnet.Dockerfile  xgboost.Dockerfile
models/: tabnet.pkl  xgboost.pkl
src/video_challenge/ML/: config.py  cross_validation.py  model.py  ncv.py  optuna_objective.py  threshold_classifier  threshold_classifier.py  train_final.py
src/video_challenge/cli/: extract_features.py
src/video_challenge/feature_extraction/: extract_features.py  features.py  pull_features.py
src/video_challenge/preprocessing/: compute_acc.py  interpolate.py  preprocess.py  preprocess_dir.py
src/video_challenge/tabular/ML/: cross_validation.py  optuna_objective.py
src/video_challenge/tabular/feature_extraction/: extract_features.py
src/video_challenge/tabular/preprocessing/: compute_acc.py  interpolate.py  preprocess.py  preprocess_dir.py
src/video_challenge/tabular/utils/: check_file_label.py  metadata.py
src/video_challenge/utils/: extract_child_segment.py
